package include

type Creator[T any] struct {
}
